Fix for SEO status alignment; right nav active item

--- a/wp-content/themes/Karma/style.css
+++ b/wp-content/themes/Karma/style.css
@@ -274,7 +274,7 @@ width:980px !important;
 
 
 #wp-admin-bar-wpseo-menu {
-    width:65px;
+    width:68px;
 }
 
 
@@ -1005,7 +1005,7 @@ position:absolute;
 .nav_right_sub_nav ul li.current-menu-parent ul li.current_page_item a:hover,
 .nav_right_sub_nav ul li ul li a,
 .nav_right_sub_nav ul li ul li a:hover{padding-left: 4px !important;margin: 0px !important;}
-.nav_right_sub_nav li.current_page_item a {color:#666 !important;}
+.nav_right_sub_nav li.current_page_item a {color:#FFF !important;}
 .nav_right_sub_nav li.menu-item-has-children a:hover {color:#444 !important;background:url(images/_global/separator3.gif) 0 100% repeat-x !important;}
 .nav_right_sub_nav li.menu-item-has-children li a {color:#009bc3 !important;}
 .nav_right_sub_nav ul li.current-menu-parent ul li.current_page_item a,
